[package]
name = "icao-9303"
description = "ICAO 9303 electronic machine readable travel document (eMRTD) standard implementation."
readme = "README.md"
documentation = "https://docs.rs/icao-9303"
repository = "https://github.com/recmo/icao-9303"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.89"
blake3 = "1.5.4"
bytes = "1.7.1"
cbc = { version = "0.1.2", features = ["block-padding"] }
cbc-mac = "0.1.1"
cipher = { version = "0.4.4", features = ["alloc", "block-padding"] }
cmac = "0.7.2"
cms = { version = "0.2.3", features = ["std"] }
const-oid = { version = "0.9.6", features = ["db"] }
crc = "3.2.1"
der = { version = "0.7.9", features = ["oid", "derive", "std"] }
des = "0.8.1"
hex = "0.4.3"
hex-literal = "0.4.1"
num_enum = "0.7.3"
rand = "0.8.5"
ruint = { version = "1.12.3", features = ["rand"] }
rusb = { version = "0.9.4", optional = true }
sha1 = "0.10.6"
sha2 = "0.10.8"
spki = "0.7.3"
thiserror = "1.0.64"

[target.'cfg(not(lib))'.dependencies]
argh = "0.1.12"
glob = "0.3.1"
serde = "1.0.210"
serde_json = "1.0.128"
base64 = "0.22.1"

[features]
default = ["proxmark3"]
proxmark3 = ["rusb"]